// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer() /PLANNER-PC/MODULES/ENTITIES/EVENTS/FETCH_SUCCESS it should return event map 1`] = `
"Snapshot Diff:
- First value
+ Second value

- Object {}
+ Object {
+   \\"2019-06-29T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-06-29T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-06-30T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 7,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-06-29T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-29T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-06-30T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-06-30T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-01T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 7,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-29T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-06-30T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-03T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-01T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-02T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 72,
+       \\"id\\": \\"a172v00000ccaYWAAY\\",
+       \\"internalEndDateTime\\": 2019-07-03T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-30T15:00:00.000Z,
+       \\"title\\": \\"4日まで入ってるはず\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-06-30T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-03T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-01T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-02T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 72,
+       \\"id\\": \\"a172v00000ccaYbAAI\\",
+       \\"internalEndDateTime\\": 2019-07-03T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-30T15:00:00.000Z,
+       \\"title\\": \\"テスト\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-06-30T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 90,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-06-30T16:30:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-06-30T16:30:00.000Z,
+       \\"endDateTimeOfWeek\\": 2019-06-30T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 1,
+       \\"id\\": \\"a172v00000ccakxAAA\\",
+       \\"internalEndDateTime\\": 2019-06-30T16:30:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": true,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": false,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 90,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-30T15:00:00.000Z,
+       \\"title\\": \\"aaaaaa\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-01T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-01T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-02T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 7,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-01T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-29T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-01T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-06T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-02T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 120,
+       \\"id\\": \\"a172v00000ccalCAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-06T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 5,
+       \\"periodOfWeek\\": 5,
+       \\"startDateTime\\": 2019-07-01T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-01T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-01T15:00:00.000Z,
+       \\"title\\": \\"ふが\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-01T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-03T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-02T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-02T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 72,
+       \\"id\\": \\"a172v00000ccaYWAAY\\",
+       \\"internalEndDateTime\\": 2019-07-03T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-01T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-30T15:00:00.000Z,
+       \\"title\\": \\"4日まで入ってるはず\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-01T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-03T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-02T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-02T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 72,
+       \\"id\\": \\"a172v00000ccaYbAAI\\",
+       \\"internalEndDateTime\\": 2019-07-03T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-01T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-30T15:00:00.000Z,
+       \\"title\\": \\"テスト\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-02T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-02T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-03T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 7,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-02T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-29T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-02T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-06T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-03T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 120,
+       \\"id\\": \\"a172v00000ccalCAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-06T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 5,
+       \\"periodOfWeek\\": 5,
+       \\"startDateTime\\": 2019-07-01T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-02T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-01T15:00:00.000Z,
+       \\"title\\": \\"ふが\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-02T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-03T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-03T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-02T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 72,
+       \\"id\\": \\"a172v00000ccaYWAAY\\",
+       \\"internalEndDateTime\\": 2019-07-03T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-02T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-30T15:00:00.000Z,
+       \\"title\\": \\"4日まで入ってるはず\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-02T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-03T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-03T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-02T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 72,
+       \\"id\\": \\"a172v00000ccaYbAAI\\",
+       \\"internalEndDateTime\\": 2019-07-03T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-06-30T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-02T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-30T15:00:00.000Z,
+       \\"title\\": \\"テスト\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-03T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-03T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-04T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 7,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-03T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-29T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-03T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-06T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-04T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 120,
+       \\"id\\": \\"a172v00000ccalCAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-06T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 5,
+       \\"periodOfWeek\\": 5,
+       \\"startDateTime\\": 2019-07-01T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-03T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-01T15:00:00.000Z,
+       \\"title\\": \\"ふが\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-03T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-04T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-04T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-03T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 24,
+       \\"id\\": \\"a172v00000ccaYqAAI\\",
+       \\"internalEndDateTime\\": 2019-07-04T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-03T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-03T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-03T15:00:00.000Z,
+       \\"title\\": \\"デイリーサマリー\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-03T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 1409,
+       \\"endDateTime\\": 2019-07-04T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-04T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-03T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 0,
+       \\"id\\": \\"a172v00000ccaZUAAY\\",
+       \\"internalEndDateTime\\": 2019-07-04T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": true,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 30,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-04T14:30:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-04T14:30:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-03T15:00:00.000Z,
+       \\"title\\": null,
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-04T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-04T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-05T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 7,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-04T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-29T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-04T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-06T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-05T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 120,
+       \\"id\\": \\"a172v00000ccalCAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-06T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 5,
+       \\"periodOfWeek\\": 5,
+       \\"startDateTime\\": 2019-07-01T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-04T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-01T15:00:00.000Z,
+       \\"title\\": \\"ふが\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-05T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-05T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-06T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 7,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-05T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-06-29T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-05T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-06T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-06T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-05T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 120,
+       \\"id\\": \\"a172v00000ccalCAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-06T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 5,
+       \\"periodOfWeek\\": 5,
+       \\"startDateTime\\": 2019-07-01T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-05T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-01T15:00:00.000Z,
+       \\"title\\": \\"ふが\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-06T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-06T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-07T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-09T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 4,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-06T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-06T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-07T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-07T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-08T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-09T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 4,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-07T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-06T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-08T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-08T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-09T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-09T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 4,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-08T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-06T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-09T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-09T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-10T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-10T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-09T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 288,
+       \\"id\\": \\"a172v00000ccakEAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-10T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": true,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 12,
+       \\"periodOfWeek\\": 4,
+       \\"startDateTime\\": 2019-06-28T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-09T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-06T15:00:00.000Z,
+       \\"title\\": \\"最優先イベント\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": true,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-09T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 30,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-09T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-09T15:00:00.000Z,
+       \\"endDateTimeOfWeek\\": 2019-07-09T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 0,
+       \\"id\\": \\"a172v00000ccad7AAA\\",
+       \\"internalEndDateTime\\": 2019-07-09T15:00:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": true,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": true,
+       \\"isOverMultipleDays\\": false,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 30,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-09T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-09T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-09T15:00:00.000Z,
+       \\"title\\": \\"外出\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": true,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-09T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 30,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-09T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-09T15:00:00.000Z,
+       \\"endDateTimeOfWeek\\": 2019-07-09T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 0,
+       \\"id\\": \\"a172v00000ccaeXAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-09T15:00:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": true,
+       \\"isOverMultipleDays\\": false,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 30,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-09T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-09T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-09T15:00:00.000Z,
+       \\"title\\": \\"外出\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-21T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-21T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 600,
+       \\"elapsedMinutesOfStartDateTime\\": 540,
+       \\"endDateTime\\": 2019-07-22T01:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-22T01:00:00.000Z,
+       \\"endDateTimeOfWeek\\": 2019-07-21T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 1,
+       \\"id\\": \\"a172v00000ccanXAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-22T01:00:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": true,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": false,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": \\"7\\",
+       \\"jobId\\": \\"a0h2v00000Xa3gRAAR\\",
+       \\"jobName\\": \\"7\\",
+       \\"location\\": null,
+       \\"minutes\\": 60,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-22T00:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-22T00:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-21T15:00:00.000Z,
+       \\"title\\": null,
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-21T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 1380,
+       \\"endDateTime\\": 2019-07-22T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-22T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-21T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 1,
+       \\"id\\": \\"a172v00000ccaewAAA\\",
+       \\"internalEndDateTime\\": 2019-07-22T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": true,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 59,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-22T14:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-22T14:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-21T15:00:00.000Z,
+       \\"title\\": \\"でちゃダメパターン\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-22T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-22T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-24T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-23T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-23T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 48,
+       \\"id\\": \\"a172v00000ccYl5AAE\\",
+       \\"internalEndDateTime\\": 2019-07-24T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 2,
+       \\"periodOfWeek\\": 2,
+       \\"startDateTime\\": 2019-07-22T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-22T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-22T15:00:00.000Z,
+       \\"title\\": \\"test\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-22T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-23T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-23T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-22T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 24,
+       \\"id\\": \\"a172v00000ccYnTAAU\\",
+       \\"internalEndDateTime\\": 2019-07-23T14:59:00.000Z,
+       \\"isAllDay\\": true,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-22T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-22T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-22T15:00:00.000Z,
+       \\"title\\": null,
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-22T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 30,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-22T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-22T15:00:00.000Z,
+       \\"endDateTimeOfWeek\\": 2019-07-22T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 0,
+       \\"id\\": \\"a172v00000ccYn8AAE\\",
+       \\"internalEndDateTime\\": 2019-07-22T15:00:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": true,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": false,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 30,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-22T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-22T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-22T15:00:00.000Z,
+       \\"title\\": \\"TEST\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-22T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 600,
+       \\"elapsedMinutesOfStartDateTime\\": 420,
+       \\"endDateTime\\": 2019-07-23T01:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-23T01:00:00.000Z,
+       \\"endDateTimeOfWeek\\": 2019-07-22T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 3,
+       \\"id\\": \\"a172v00000ccbhCAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-23T01:00:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": true,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": false,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 180,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-22T22:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-22T22:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-22T15:00:00.000Z,
+       \\"title\\": \\"GMT2\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-22T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1230,
+       \\"elapsedMinutesOfStartDateTime\\": 480,
+       \\"endDateTime\\": 2019-07-23T11:30:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-23T11:30:00.000Z,
+       \\"endDateTimeOfWeek\\": 2019-07-22T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 12,
+       \\"id\\": \\"a172v00000ccbfuAAA\\",
+       \\"internalEndDateTime\\": 2019-07-23T11:30:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": true,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": false,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 750,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-22T23:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-22T23:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-22T15:00:00.000Z,
+       \\"title\\": \\"GMT\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-23T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-23T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-24T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-24T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-23T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 48,
+       \\"id\\": \\"a172v00000ccYl5AAE\\",
+       \\"internalEndDateTime\\": 2019-07-24T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 2,
+       \\"periodOfWeek\\": 2,
+       \\"startDateTime\\": 2019-07-22T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-23T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-22T15:00:00.000Z,
+       \\"title\\": \\"test\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-23T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-24T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-24T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-23T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 24,
+       \\"id\\": \\"a172v00000ccBhPAAU\\",
+       \\"internalEndDateTime\\": 2019-07-24T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 1,
+       \\"periodOfWeek\\": 1,
+       \\"startDateTime\\": 2019-07-23T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-23T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-23T15:00:00.000Z,
+       \\"title\\": \\"テスト\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-24T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-24T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 660,
+       \\"endDateTime\\": 2019-07-27T02:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-25T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-26T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 48,
+       \\"id\\": \\"a172v00000ccab1AAA\\",
+       \\"internalEndDateTime\\": 2019-07-27T01:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 779,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-07-25T02:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-25T02:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-24T15:00:00.000Z,
+       \\"title\\": \\"テスト\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-24T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-26T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-25T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-25T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 48,
+       \\"id\\": \\"a172v00000ccabBAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-26T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 2,
+       \\"periodOfWeek\\": 2,
+       \\"startDateTime\\": 2019-07-24T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-24T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-24T15:00:00.000Z,
+       \\"title\\": \\"テスト2\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-25T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-25T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-27T02:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-26T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-26T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 48,
+       \\"id\\": \\"a172v00000ccab1AAA\\",
+       \\"internalEndDateTime\\": 2019-07-27T01:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-07-25T02:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-25T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-24T15:00:00.000Z,
+       \\"title\\": \\"テスト\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-25T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-26T15:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-26T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-25T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 48,
+       \\"id\\": \\"a172v00000ccabBAAQ\\",
+       \\"internalEndDateTime\\": 2019-07-26T14:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 2,
+       \\"periodOfWeek\\": 2,
+       \\"startDateTime\\": 2019-07-24T15:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-25T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-24T15:00:00.000Z,
+       \\"title\\": \\"テスト2\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-26T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspirit\\",
+       \\"date\\": 2019-07-26T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 660,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-27T02:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-27T02:00:00.000Z,
+       \\"endDateTimeOfWeek\\": 2019-07-26T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 48,
+       \\"id\\": \\"a172v00000ccab1AAA\\",
+       \\"internalEndDateTime\\": 2019-07-27T01:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 660,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-07-25T02:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-26T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-24T15:00:00.000Z,
+       \\"title\\": \\"テスト\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-27T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspiritPSA\\",
+       \\"date\\": 2019-07-27T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 540,
+       \\"endDateTime\\": 2019-07-30T00:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-28T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-29T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 48,
+       \\"id\\": \\"a172v00000ccab1AAB\\",
+       \\"internalEndDateTime\\": 2019-07-29T23:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 899,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-07-28T00:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-28T00:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-27T15:00:00.000Z,
+       \\"title\\": \\"PSA Project\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-28T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspiritPSA\\",
+       \\"date\\": 2019-07-28T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 1439,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-30T00:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-29T14:59:59.999Z,
+       \\"endDateTimeOfWeek\\": 2019-07-29T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 48,
+       \\"id\\": \\"a172v00000ccab1AAB\\",
+       \\"internalEndDateTime\\": 2019-07-29T23:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 1439,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-07-28T00:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-28T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-27T15:00:00.000Z,
+       \\"title\\": \\"PSA Project\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+   \\"2019-07-29T15:00:00.000Z\\": Array [
+     Object {
+       \\"calculateCapacity\\": false,
+       \\"contactId\\": null,
+       \\"contactName\\": null,
+       \\"createdServiceBy\\": \\"teamspiritPSA\\",
+       \\"date\\": 2019-07-29T15:00:00.000Z,
+       \\"description\\": null,
+       \\"elapsedMinutesOfEndDateTime\\": 540,
+       \\"elapsedMinutesOfStartDateTime\\": 0,
+       \\"endDateTime\\": 2019-07-30T00:00:00.000Z,
+       \\"endDateTimeOfDay\\": 2019-07-30T00:00:00.000Z,
+       \\"endDateTimeOfWeek\\": 2019-07-29T15:00:00.000Z,
+       \\"externalEventId\\": null,
+       \\"hours\\": 48,
+       \\"id\\": \\"a172v00000ccab1AAB\\",
+       \\"internalEndDateTime\\": 2019-07-29T23:59:00.000Z,
+       \\"isAllDay\\": false,
+       \\"isCreating\\": false,
+       \\"isEditing\\": false,
+       \\"isLessThanDay\\": false,
+       \\"isOrganizer\\": true,
+       \\"isOuting\\": false,
+       \\"isOverMultipleDays\\": true,
+       \\"isOverMultipleWeeks\\": false,
+       \\"isReadOnly\\": false,
+       \\"jobCode\\": null,
+       \\"jobId\\": null,
+       \\"jobName\\": null,
+       \\"location\\": null,
+       \\"minutes\\": 540,
+       \\"ownerId\\": \\"0052v00000WEgZvAAL\\",
+       \\"period\\": 3,
+       \\"periodOfWeek\\": 3,
+       \\"startDateTime\\": 2019-07-28T00:00:00.000Z,
+       \\"startDateTimeOfDay\\": 2019-07-29T15:00:00.000Z,
+       \\"startDateTimeOfWeek\\": 2019-07-27T15:00:00.000Z,
+       \\"title\\": \\"PSA Project\\",
+       \\"workCategoryCode\\": null,
+       \\"workCategoryId\\": null,
+       \\"workCategoryName\\": null,
+     },
+   ],
+ }"
`;

exports[`reducer() /PLANNER-PC/MODULES/ENTITIES/EVENTS/UPDATE it should update isCreating to true 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,10 @@
  Object {
    \\"2019-05-16T15:00:00.000Z\\": Array [
      Object {
        \\"id\\": \\"1\\",
-       \\"isCreating\\": false,
+       \\"isCreating\\": true,
      },
      Object {
        \\"id\\": \\"2\\",
        \\"isCreating\\": false,
      },"
`;

exports[`reducer() /PLANNER-PC/MODULES/ENTITIES/EVENTS/UPDATE it should update isEditing to true 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,10 @@
  Object {
    \\"2019-05-16T15:00:00.000Z\\": Array [
      Object {
        \\"id\\": \\"1\\",
-       \\"isEditing\\": false,
+       \\"isEditing\\": true,
      },
      Object {
        \\"id\\": \\"2\\",
        \\"isEditing\\": false,
      },"
`;
